// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Next/Select Advanced 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV"
  >
    <div
      className="sc-ehSCib kgOstl sc-lcujXC hqsfOe"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 hkpJCj Select__StyledSelectDropButton-sc-17idtfo-1 hdOuJv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jmuHez"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iAryDB"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eRNDsB Select__SelectTextInput-sc-17idtfo-0 bIurki sc-higXBA gDWSrd"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                tabIndex="-1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 eA-DBEo"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 irfiPd"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      className="sc-ehSCib kgOstl sc-lcujXC hqsfOe"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 hkpJCj Select__StyledSelectDropButton-sc-17idtfo-1 hdOuJv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jmuHez"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iAryDB"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eRNDsB Select__SelectTextInput-sc-17idtfo-0 bIurki sc-higXBA gDWSrd"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Passed an object as option"
                readOnly={true}
                tabIndex="-1"
                type="text"
                value="Object 1"
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 eA-DBEo"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 irfiPd"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Next/Select Standard 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV"
  >
    <div
      className="sc-ehSCib kgOstl sc-lcujXC hqsfOe"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 hkpJCj Select__StyledSelectDropButton-sc-17idtfo-1 hdOuJv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jmuHez"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iAryDB"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eRNDsB Select__SelectTextInput-sc-17idtfo-0 bIurki sc-higXBA gDWSrd"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Select one..."
                readOnly={true}
                tabIndex="-1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 eA-DBEo"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 irfiPd"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      className="sc-ehSCib kgOstl sc-lcujXC hqsfOe"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 hkpJCj Select__StyledSelectDropButton-sc-17idtfo-1 hdOuJv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jmuHez"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iAryDB"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eRNDsB Select__SelectTextInput-sc-17idtfo-0 bIurki sc-higXBA gDWSrd"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                tabIndex="-1"
                type="text"
                value="Opened option"
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 eA-DBEo"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 irfiPd"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      className="sc-ehSCib kgOstl sc-lcujXC hqsfOe"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 hkpJCj Select__StyledSelectDropButton-sc-17idtfo-1 hdOuJv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jmuHez"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iAryDB"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eRNDsB Select__SelectTextInput-sc-17idtfo-0 bIurki sc-higXBA gDWSrd"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                tabIndex="-1"
                type="text"
                value="Custom render"
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 eA-DBEo"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 irfiPd"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      className="sc-ehSCib kgOstl sc-lcujXC hqsfOe"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 hkpJCj Select__StyledSelectDropButton-sc-17idtfo-1 bDwbJX"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jmuHez"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iAryDB"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eRNDsB Select__SelectTextInput-sc-17idtfo-0 bIurki sc-higXBA gDWSrd"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                tabIndex="-1"
                type="text"
                value="Plain option"
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 eA-DBEo"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 irfiPd"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      className="sc-ehSCib kgOstl sc-lcujXC gqgDUa"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 hkpJCj Select__StyledSelectDropButton-sc-17idtfo-1 hdOuJv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jmuHez"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iAryDB"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eRNDsB Select__SelectTextInput-sc-17idtfo-0 bIurki sc-higXBA gDWSrd"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                tabIndex="-1"
                type="text"
                value="Custom width"
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 eA-DBEo"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 irfiPd"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Next/Select States 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV"
  >
    <div
      className="sc-ehSCib kgOstl sc-lcujXC hqsfOe"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 hkpJCj Select__StyledSelectDropButton-sc-17idtfo-1 hdOuJv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jmuHez"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iAryDB"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eRNDsB Select__SelectTextInput-sc-17idtfo-0 bIurki sc-higXBA jRjDwm"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                tabIndex="-1"
                type="text"
                value="Emphasized"
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 eA-DBEo"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 irfiPd"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      className="sc-ehSCib kgOstl sc-lcujXC hqsfOe"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 gqtTVF Select__StyledSelectDropButton-sc-17idtfo-1 hdOuJv"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jmuHez"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iAryDB"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eRNDsB Select__SelectTextInput-sc-17idtfo-0 cANsmG sc-higXBA gDWSrd"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                tabIndex="-1"
                type="text"
                value="Disabled"
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 eA-DBEo"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 irfiPd"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      className="sc-ehSCib etCWIn sc-lcujXC hqsfOe"
    >
      <button
        aria-label="Open Drop"
        className="StyledButton-sc-323bzc-0 hkpJCj Select__StyledSelectDropButton-sc-17idtfo-1 hdOuJv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jmuHez"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iAryDB"
          >
            <div
              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
            >
              <input
                autoComplete="off"
                className="StyledTextInput-sc-1x30a0s-0 eRNDsB Select__SelectTextInput-sc-17idtfo-0 bIurki sc-higXBA gDWSrd"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                tabIndex="-1"
                type="text"
                value="Invalid"
              />
            </div>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 eA-DBEo"
            style={
              Object {
                "minWidth": "auto",
              }
            }
          >
            <svg
              aria-label="FormDown"
              className="StyledIcon-ofa7kd-0 irfiPd"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;
